# kcal

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  DEPLOY.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.githooks/: post-commit
.github/workflows/: ci.yml
data/: food_catalog_seed.csv
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_ai_usage.py  0003_onboarding_subscriptions.py  0004_tracking_and_targets.py  0005_activity_logs.py  0006_food_insights_and_smart_reminders.py  0007_inactivity_reminders.py  0008_apple_health_shortcuts.py  0009_apple_health_daily_syncs.py  0010_growth_referrals.py  0011_active_referral_rewards.py  0012_weekly_mission_bonus.py  0013_yookassa_payment_statuses.py  0014_subscription_plans.py  0015_user_birth_date.py  0016_payment_charge_idempotency.py  0017_quality_events.py  0018_weight_goals.py  0019_promo_codes.py  0020_food_entry_meal_type.py  0021_food_catalog.py  0022_admin_settings.py  (+3 more)
scripts/: backup-and-restore-check.sh  backup-db.sh  catalog-gaps.py  check-compose.sh  deploy-upload.sh  entrypoint.sh  git-autopush.sh  import-food-catalog.py  load-smoke.sh  post-deploy.sh  restore-check-db.sh  restore-db.sh  smoke.sh  validate-docker.sh  validate.sh
tests/: test_admin_product.py  test_ai_limits.py  test_barcode.py  test_catalog_gaps.py  test_config.py  test_diary_formatting.py  test_fatsecret.py  test_food_formatting.py  test_food_search.py  test_health.py  test_logging.py  test_open_food_facts.py  test_product_analytics.py  test_schemas.py  test_webapp_static.py
(+71 files in other folders)
